--- a/src/main/resources/util/db_mysql.properties
+++ b/src/main/resources/util/db_mysql.properties
@@ -1,4 +1,4 @@
 driver = com.mysql.jdbc.Driver
-url = jdbc:mysql://182.61.26.230:3306/interface_test?useUnicode=true&characterEncoding=utf8
+url = jdbc:mysql://localhost:3306/interface_test?useUnicode=true&characterEncoding=utf8
 dbUser = root
 dbPwd =zw123456
